# gerenciamento

./: pyproject.toml  requirements.txt
gerenciador/: db.sqlite3  requirements.txt
gerenciador/config/: settings.py  urls.py
gerenciador/loja/: admin.py  urls.py
gerenciador/loja/filters/: ProdutoFilter.py
gerenciador/loja/managers/: produto_manager.py
gerenciador/loja/migrations/: 0001_initial.py  0002_alter_produto_marca_alter_produto_tipo.py  0003_produto_quantidade_alter_produto_marca_and_more.py  0004_marca_ativo_produto_ativo_alter_produto_marca_and_more.py  0005_marca_atualizado_em_marca_criado_em_and_more.py
gerenciador/loja/models/: __init__.py  marca.py  produto.py
gerenciador/loja/serializers/: __init__.py  marca.py  produto.py
gerenciador/loja/services/: marca_service.py  produto_service.py
gerenciador/loja/views/: __init__.py  marca.py  produto.py
